service/envs/base/app-go.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-go
spec:
  ports:
  - port: 3000
    targetPort: 80
    name: http
  type: LoadBalancer
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-go
spec:
  selector:
    matchLabels:
      app: app-go
  template:
    metadata:
      labels:
        app: app-go
    spec:
      containers:
      - name: app-go
        image: 192.168.0.10:32000/app-go
        ports:
          - containerPort: 80
        command: ["/app/webserver"]
