service/envs/base/app-openresty.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-openresty
spec:
  ports:
  - port: 3000
    targetPort: 80
    name: http
  type: LoadBalancer
  selector:
    app: app-openresty
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-openresty
spec:
  selector:
    matchLabels:
      app: app-openresty
  template:
    metadata:
      labels:
        app: app-openresty
    spec:
      # 外部DNSに到達できないので独自に追加
      hostAliases:
      - ip: "104.21.54.83"
        hostnames:
        - "jsonplaceholder.typicode.com"    
      containers:
      - name: app-openresty
        image: 192.168.0.10:32000/app-openresty
        ports:
          - containerPort: 80
        # command: ["uvicorn", "asgi:app"]
        # args: ["--host", "0.0.0.0", "--port", "80"]
        volumeMounts:
        - name: my-volume
          mountPath: "/var/lib/my-mlops-data"
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: disk-shared
