service/envs/base/app-python.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-python
spec:
  ports:
  - port: 3000
    targetPort: 80
    name: http
  type: LoadBalancer
  selector:
    app: app-python
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-python
spec:
  selector:
    matchLabels:
      app: app-python
  template:
    metadata:
      labels:
        app: app-python
    spec:
      containers:
      - name: app-python
        image: 192.168.0.10:32000/app-python
        ports:
          - containerPort: 80
        command: ["uvicorn", "app:app"]
        args: ["--host", "0.0.0.0", "--port", "80"]
