service/envs/base/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 3000
    targetPort: 80
    name: http
  type: LoadBalancer
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: 192.168.0.10:32000/mykubeapp1
        ports:
          - containerPort: 80
        command: ["uvicorn", "app:app"]  # kubernetesのcommandはdockerにおけるentrypoint
        args: ["--host", "0.0.0.0", "--port", "80"]
