service/envs/base/middleware-gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-gitea
spec:
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  # - port: 22
  #   targetPort: 22
  #   name: ssh
  type: LoadBalancer
  selector:
    app: middleware-gitea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-gitea
spec:
  selector:
    matchLabels:
      app: middleware-gitea
  template:
    metadata:
      labels:
        app: middleware-gitea
    spec:
      containers:
      - name: middleware-gitea
        image: gitea/gitea:1.19.0
        ports:
        - containerPort: 3000
          name: gitea
        # - containerPort: 22
        #   name: git-ssh
        # volumeMounts:
        # - name: my-volume
        #   mountPath: "/var/lib/my-mlops-data"
