service/envs/base/middleware-superset.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-superset
spec:
  ports:
  - port: 3000
    targetPort: 8088
    name: http
  # - port: 22
  #   targetPort: 22
  #   name: ssh
  type: LoadBalancer
  selector:
    app: middleware-superset
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-superset
spec:
  selector:
    matchLabels:
      app: middleware-superset
  template:
    metadata:
      labels:
        app: middleware-superset
    spec:
      containers:
      - name: middleware-superset
        image: apache/superset
        ports:
        - containerPort: 8088
