service/envs/base/network-policy.yaml
# app: myapp にマッチするPodの外部通信を禁止する

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-external-egress
spec:
  podSelector:
    matchLabels:
      app: myapp
  policyTypes:
  - Egress
  egress: []


# NetworkPolicyはL3/L4なので
# ドメインレベルの制御はistioなどのトラフィックルーティングのツールが必要


# Egress は出口を意味する
